    Based on patches by Nathan Baum and Mercutio@M*U*S*H. [MG]

Commands:
  * @decompile now takes multiple attribute patterns after the /
    (@dec obj/attr attr2) [GM]
  * @channel/decompile now shows the dbref of the channel mogrifier,
    instead of its name. [SW]

Functions:
  * testlock(<boolexp>, <victim>) tests a lock without setting it.
    Suggested by Mercutio@M*U*S*H. [GM]
  * cwho() now takes an optional second argument, to control whether
    online, offline or all players are returned. Suggested by Mercutio,
    based on a patch by Ifrit. [MG]
  * room(<room>) now returns <room>, instead of #-1. Also, room(<exit>)
    returns the exit's source room, rather than the destination. Suggested
    by Null@M*U*S*H. [MG]

Fixes:
 * fun_merge() was eating characters when ansi was present. Reported
   by Nammyung. Fixed. [GM]
 * Windows compile fixes.
 * page/port didn't evaluate its arguments properly. Reported
   by adkins@drigon.com. [SW]
 * randword() with a single element list wasn't dealing correctly
   with extra spaces. Reported by Widdis. [SW]
 * @listen/^-listens should now be triggered with the object being
   spoofed as %#, not the object doing the spoofing, when @message/spoof
   (and @pemit/spoof, etc) are used. Reported by Mercutio@M*U*S*H. [MG]
 * Fixed some minor type-related warnings when compiling on cygwin. [MG]
   
 Minor changes:
 * @listen/^-listens now carry over ANSI. Requested by Mercutio. [MG]

Tools:
 * New script in utils/ for searching change logs: grep-cl.pl [SW]

Version 1.8.3 patchlevel 10                     Aug 24, 2009

Major changes:
 * Switched project management (Bug tracking, revision control, etc.)
   to Google Code. See http://code.google.com/p/pennmush

Minor changes:
 * @search and lsearch() now only charge 100 pennies if an evaluating
   search (EVAL, EPLAYER, EROOM, ETHING, EOBJECT, EEXIT or ELOCK) or
   an exhaustive attribute search (COMMAND, LISTEN) is performed.